Fix link to telegram bot

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 			{% endif %}
 			<div class="divider"></div>
 		</div>
-		<p class="headerName"><a href="https://t.me/LicensePlateCheckBot" target="_blank">{{ site.app_name }}</a></p>
+		<p class="headerName">{{ site.app_name }}</p>
 	</div>
 	<nav class="scroll">
 		<ul>
