--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,9 @@
                         </div>
                         <div class="appNamePriceContainer">
                             <h1 class="appName">
-                                {{ site.app_name }}
+                                <a href="https://t.me/LicensePlateCheckBot" target="_blank" style="color:white;">
+                                  {{ site.app_name }}
+                                </a>
                             </h1>
                             <h2 class="appPrice">
                                 {{ site.app_price }}
