--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
                             {% if site.playstore_link %}
                                 <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
                             {% endif %}
-                            <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" width="300px" height="300px" src="assets/qr-code.png"></a>
+                            <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/qr-code.png"></a>
                         </div>
                     </div>
                     {% include features.html %}
