--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
 			<a href="{{ site.presskit_download_link }}">Press Kit</a>
 		{% endif %}
 	</div>
+  {% if site.footer %}
 	<div class="footerIcons">
 
 		{% if site.facebook_username %}
@@ -53,8 +54,8 @@
 				</span>
 			</a>
 		{% endif %}
-
 	</div>
+	{% endif %}
 	{% if site.your_name %}
 	<p class="footerText">Проект реалізовано за підтримки {% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.your_name }}{% if site.your_link %}</a>{% endif %}{% if site.your_city %} in {{ site.your_city }}{% endif %}</p>
 	{% endif %}
