--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 			<a href="{{ site.presskit_download_link }}">Press Kit</a>
 		{% endif %}
 	</div>
-  {% if site.footer %}
+  {% if site.tmp_footer %}
 	<div class="footerIcons">
 
 		{% if site.facebook_username %}
@@ -55,9 +55,19 @@
 			</a>
 		{% endif %}
 	</div>
+
+		{% if site.your_name %}
+		<p class="footerText">Проект реалізовано за підтримки {% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.your_name }}{% if site.your_link %}</a>{% endif %}{% if site.your_city %} in {{ site.your_city }}{% endif %}</p>
+		{% endif %}
+
 	{% endif %}
-	{% if site.your_name %}
-	<p class="footerText">Проект реалізовано за підтримки {% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.your_name }}{% if site.your_link %}</a>{% endif %}{% if site.your_city %} in {{ site.your_city }}{% endif %}</p>
-	{% endif %}
+
+		<p class="footerText"> За підтримки: </p>
+		<img class="playStore" src="assets/support/support_1.png"> <a href="https://www.zsu.gov.ua/" target="_blank"> Збройних сили України </a>
+		<img class="playStore" src="assets/support/support_2.png"> <a href="https://ssu.gov.ua/" target="_blank"> Служби безпеки України </a>
+		<img class="playStore" src="assets/support/support_3.png"> <a href="https://www.kmu.gov.ua/" target="_blank"> Міністерства внутрішніх справ України </a>
+		<img class="playStore" src="assets/support/support_4.svg"> <a href="https://www.softserveinc.com/" target="_blank"> SoftServe Inc. </a>
+
+
 
 </footer>
