--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -697,6 +697,11 @@ footer {
     text-decoration: none;
 }
 
+.FooterSupportDiv {
+    flex: 0 1 20%;
+    margin-right: 40px;
+}
+
 .hidden {
 	display: none;
 }
