--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,17 +63,26 @@
 	{% endif %}
 
 		<p class="footerText"> За підтримки: </p>
-		<img class="FooterSupport" src="assets/support/support_1.png">
-		<a class="FooterSupportText" href="https://www.zsu.gov.ua/" target="_blank"> Збройних сили України </a>
 
-		<img class="FooterSupport" src="assets/support/support_2.png">
-		<a class="FooterSupportText" href="https://ssu.gov.ua/" target="_blank"> Служби безпеки України </a>
+		<div class="FooterSupportDiv">
+			<img class="FooterSupport" src="assets/support/support_1.png">
+			<a class="FooterSupportText" href="https://www.zsu.gov.ua/" target="_blank"> Збройних сили України </a>
+		</div>
 
-		<img class="FooterSupport" src="assets/support/support_3.png">
-		<a class="FooterSupportText" href="https://www.kmu.gov.ua/" target="_blank"> Міністерства внутрішніх справ України </a>
+		<div class="FooterSupportDiv">
+			<img class="FooterSupport" src="assets/support/support_2.png">
+			<a class="FooterSupportText" href="https://ssu.gov.ua/" target="_blank"> Служби безпеки України </a>
+		</div>
 
-		<img class="FooterSupport" src="assets/support/support_4.svg">
-		<a class="FooterSupportText" href="https://www.softserveinc.com/" target="_blank"> SoftServe Inc. </a>
+		<div class="FooterSupportDiv">
+			<img class="FooterSupport" src="assets/support/support_3.png">
+			<a class="FooterSupportText" href="https://www.kmu.gov.ua/" target="_blank"> Міністерства внутрішніх справ України </a>
+		</div>
+
+		<div class="FooterSupportDiv">
+			<img class="FooterSupport" src="assets/support/support_4.svg">
+			<a class="FooterSupportText" href="https://www.softserveinc.com/" target="_blank"> SoftServe Inc. </a>
+		</div>
 
 
 
