--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -82,7 +82,7 @@
 
 		<div class="FooterSupportDiv">
 			<img class="FooterSupport" src="assets/support/support_4.svg">
-			<a class="FooterSupportText" href="https://www.softserveinc.com/" target="_blank"> SoftServe Inc. (AI & Big Data CoEs)</a>
+			<a class="FooterSupportText" href="https://www.softserveinc.com/" target="_blank"> SoftServe Inc. <br />(Data Science & Big Data CoEs)</a>
 		</div>
 
 
