--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,7 +63,7 @@
 
 	{% endif %}
 
-		<p class="footerText"> За підтримки: </p>
+		<p class="footerText"> <b>За підтримки:</b> </p>
 
 		<div class="FooterSupportDiv">
 			<img class="FooterSupport" src="assets/support/support_1.png">
