One more br to the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,7 +63,7 @@
 
 	{% endif %}
 
-		<p class="footerText"> <b>За підтримки:</b> </p>
+		<p class="footerText"> <br /><b>За підтримки:</b> </p>
 
 		<div class="FooterSupportDiv">
 			<img class="FooterSupport" src="assets/support/support_1.png">
@@ -82,7 +82,7 @@
 
 		<div class="FooterSupportDiv">
 			<img class="FooterSupport" src="assets/support/support_4.svg">
-			<a class="FooterSupportText" href="https://www.softserveinc.com/" target="_blank"> SoftServe Inc. <br />(Big Data & <br> Data Science CoEs)</a>
+			<a class="FooterSupportText" href="https://www.softserveinc.com/" target="_blank"> SoftServe Inc. <br />(Big Data & <br /> Data Science CoEs)</a>
 		</div>
 
 
