Grammar mistakes fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,7 +67,7 @@
 
 		<div class="FooterSupportDiv">
 			<img class="FooterSupport" src="assets/support/support_1.png">
-			<a class="FooterSupportText" href="https://www.zsu.gov.ua/" target="_blank"> Збройних сили України </a>
+			<a class="FooterSupportText" href="https://www.zsu.gov.ua/" target="_blank"> Збройних сил України </a>
 		</div>
 
 		<div class="FooterSupportDiv">
