--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,6 +65,7 @@
 
 		<p class="footerText"> <br /><b>За підтримки:</b> </p>
 
+	<div class="footerLinks">
 		<div class="FooterSupportDiv">
 			<img class="FooterSupport" src="assets/support/support_1.png">
 			<a class="FooterSupportText" href="https://www.zsu.gov.ua/" target="_blank"> Збройних сил України </a>
@@ -84,6 +85,7 @@
 			<img class="FooterSupport" src="assets/support/support_4.svg">
 			<a class="FooterSupportText" href="https://www.softserveinc.com/" target="_blank"> SoftServe Inc. <br />(Big Data & <br /> Data Science CoEs)</a>
 		</div>
+	</div>
 <br />
 <br />
 
